[project]
name = "snappost"
version = "0.1.0"
description = ""
authors = [
    {name = "Ali",email = "alisoleimanian.it@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlmodel (>=0.0.24,<0.0.25)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "fastapi (>=0.104.0,<1.0.0)",
    "uvicorn (>=0.24.0,<1.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
